# crystaldba

./: .gitignore  CHANGELOG.md  Dockerfile  INSTALL-TEAM.md  README.md
.github/workflows/: agent.yml  docker-build-dockerhub.yml  docker-build-release.yml  release.yml  release_client.yml
agent/: Dockerfile  README.md  devenv.nix  docker-entrypoint.sh  env.example  install.sh  justfile  pyproject.toml  pytest.ini
agent/client/: Dockerfile  chat_loop.py  chat_requester.py  chat_response_followup.py  dba_chat_client.py  main.py  parse_args.py  profile.py  sql_tool.py
agent/client/test/: test_chat_loop.py  test_chat_stepper.py  test_dba_chat_client.py  test_main.py  test_parse_args.py  test_profile.py
agent/crystaldba/cli/: chat_loop.py  chat_requester.py  chat_response_followup.py  chat_turn.py  filelock.py  main.py  parse_args.py  profile.py  startup.py
agent/crystaldba/cli/test/: test_chat_loop.py  test_chat_stepper.py  test_json_serialization.py  test_main.py  test_parse_args.py  test_profile.py
agent/crystaldba/cli/test/e2e/: simple.py
agent/crystaldba/shared/: api.py  auth.py  constants.py  secure_session.py
agent/crystaldba/shared/test/: test_sql_serialization.py
agent/elia_chat/: __main__.py  app.py  chats_manager.py  config.py  models.py  runtime_config.py  themes.py
agent/elia_chat/database/: database.py  import_chatgpt.py  models.py
agent/elia_chat/screens/: chat_details.py  chat_screen.py  home_screen.py
agent/elia_chat/widgets/: agent_is_typing.py  app_header.py  chat.py  chat_header.py  chat_list.py  chat_options.py  chatbox.py  prompt_input.py
agent/resources/macos/: crystal-dba.icns  launch.sh
agent/scripts/: __init__.py
agent/shared/: auth.py  base_sql_driver.py  sql_serialization.py
agent/shared/test/: conftest.py  test_sql_serialization.py
agent/tui/: README.md  __main__.py  app.py  config.py  elia.scss  locations.py  models.py  themes.py
agent/tui/database/: converters.py  database.py
agent/tui/screens/: chat_screen.py  help_screen.py  home_screen.py
agent/tui/to_be_removed/: chats_manager.py  runtime_config.py
agent/tui/to_be_removed/database/: import_chatgpt.py  models.py
agent/tui/to_be_removed/screens/: chat_details.py  rename_chat_screen.py
agent/tui/to_be_removed/widgets/: chat_list.py
agent/tui/widgets/: app_header.py  chat.py  chat_header.py  chat_list.py  chat_options.py  chatbox.py  prompt_input.py  welcome.py
bff/cmd/: main.go
bff/pkg/server/: server.go
collector/: Dockerfile
collector-api/: collector-api-config.json
scripts/: build.sh  install_release.sh  storage-retention.sh
