[tool.poetry]
name = "agent"
version = "0.1.0"
description = "Crystal DBA Agent"
authors = ["Crystal DBA Developers <info@crystaldba.ai>"]
readme = "README.md"

packages = [
    { include = "shared", from = "." },
    { include = "client", from = "." },
]

[tool.poetry.scripts]
lint = "scripts:lint"
check = "scripts:check"
build = "scripts:build"
test = "scripts:test"
list = "scripts:list_commands"
package_arm64 = "scripts:build_linux_arm64"
package_amd64 = "scripts:build_linux_amd64"
package_macos = "scripts:build_macos_arm64"

[tool.poetry.dependencies]
python = "~3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
griptape = {extras = ["all"], version = "^1.0.1"}
http-message-signatures = "^0.5.0"
prompt-toolkit = "^3.0.48"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
requests-http-signature = "^0.7.1"
sseclient = "^0.0.27"
sse-starlette = "^2.2.1"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.1"
langfuse = "^2.57.1"
pytest-mock = "^3.14.0"
pglast = "^7.2"
asyncpg = "^0.30.0"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
pyright = "^1.1.390"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
aiosqlite = "^0.20.0"
pexpect = "^4.9.0"
docker = "^7.1.0"
requests = "^2.32.3"


[tool.poetry.group.build.dependencies]
nuitka = "^2.5.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 150

[tool.ruff]
line-length = 150
target-version = "py38"
exclude = [".venv*"]

lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "W",   # pycodestyle warnings
    # "C90", # mccabe complexity
    "N",   # pep8-naming
    # "D",   # pydocstyle
    "UP",  # pyupgrade
    "RUF"  # ruff-specific rules
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["crystal"]

[tool.pyright]
include = ["client", "shared"]
typeCheckingMode = "standard"
pythonVersion = "3.12"
strictParameterNullChecking = true
reportMissingTypeStubs = false
# reportUnknownMemberType = true
# reportUnknownParameterType = true
# reportUnknownVariableType = true
# reportUnknownArgumentType = true
reportPrivateUsage = true
reportUntypedFunctionDecorator = true
reportMissingTypeArgument = true
reportInvalidTypeVarUse = true
reportUnnecessaryCast = true
# reportUnnecessaryComparison = true
